# across-data-ingestion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ecspresso-feature-branch.yml  ecspresso-main-branch.yml  feature.yml  lint.yml  main.yaml  release-merge.yaml  release-pr.yml  release.yaml  workflow-cd-ecspresso.yml  workflow-cd-preview-ecspresso.yml  workflow-ci-checks.yml  workflow-ci-dockerized-app-build.yml
across_data_ingestion/: main.py
across_data_ingestion/core/: config.py  constants.py  exceptions.py  logging.py
across_data_ingestion/tasks/: task_loader.py
across_data_ingestion/tasks/example/: __init__.py  check_server.py  example_task.py
across_data_ingestion/tasks/schedules/: types.py
across_data_ingestion/tasks/tles/: config.py  tle_ingestion.py
across_data_ingestion/util/: __init__.py  ssm.py  vo_service.py
across_data_ingestion/util/across_api/: __init__.py
across_data_ingestion/util/across_server/: __init__.py  abstract_credential_storage.py  abstract_key_manager.py  ssm_credentials.py  (+1 more)
containers/: Dockerfile  compose.local.yml  docker-compose.local.yml  docker-compose.prod.yml
deploy/: taskdef.json
requirements/: action.in  action.txt  base.in  deploy.txt  local.in  local.txt  test.txt  types.in
scripts/: create_env_file.py
tests/: conftest.py
tests/server/: conftest.py  health_check_route_test.py
tests/tasks/: conftest.py
tests/util/: api_test.py  vo_service_test.py
(+120 files in other folders)
