[project]
name = "across-data-ingestion"
authors = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
  { name = "Craig Pellegrino", email = "craig.m.pellegrino@nasa.gov" },
]
description = "The ACROSS data ingestion server running tasks to aggregate and import various NASA mission observations and schedules into the ACROSS system to aid in coordination of large observation efforts."
dynamic = ["version"]
maintainers = [
  { name = "Jamie A. Kennea", email = "jak51@psu.edu" },
  { name = "Nitzan  N. Frock", email = "nitzan.n.frock@nasa.gov" },
  { name = "Kirill G. Vorobyev", email = "kirill.g.vorobyev@nasa.gov" },
  { name = "Samuel D. Wyatt", email = "samuel.d.wyatt@nasa.gov" },
  { name = "Craig Pellegrino", email = "craig.m.pellegrino@nasa.gov" },
]
requires-python = ">=3.12"

[tool.pytest]
asyncio_mode = "auto"

[tool.mypy]
files = ["."]
